Upgraded JDK, cleaned up for 2020.